klient-server/kubernetess/deployment-django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deployment-django
  name: deployment-django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-django
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: deployment-django
    spec:
      containers:
      - image: default-route-openshift-image-registry.apps.ocp.lab.cloudpak.site/labpr>
        name: kontener-django
        volumeMounts:
        - name: backend-persistent-storage
          mountPath: /files/phone
      volumes:
      - name: backend-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-django
