klient-server/kubernetess/deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-mysql
spec:
  selector:
    matchLabels:
      app: deployment-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: deployment-mysql
    spec:
      containers:
      - image: mysql:8.0.28
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-mysql
