klient-server/kubernetess/svc-django.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-django
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: deployment-django
  type: ClusterIP
