klient-server/kubernetess/svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mysql
spec:
  ports:
  - port: 3306
  selector:
    app: svc-mysql
  clusterIP: None
